implemented topbar routing

--- a/app/.jshintrc
+++ b/app/.jshintrc
@@ -133,6 +133,8 @@
       "SimpleSchema": false,
       "Roles": false,
       "FlowRouter": false,
+      "FlowLayout": false,
+      "s": false,
 
       // Collections
       "Apps": true,
