--- a/app/.jshintrc
+++ b/app/.jshintrc
@@ -139,6 +139,9 @@
       // Collections
       "Apps": true,
       "Categories": true,
-      "Genres": true
+      "Genres": true,
+
+      // App-specific
+      "App": true
     }
 }
