added installed apps page

--- a/app/.jshintrc
+++ b/app/.jshintrc
@@ -135,6 +135,7 @@
       "FlowRouter": false,
       "FlowLayout": false,
       "s": false,
+      "AntiModals": false,
 
       // Collections
       "Apps": true,
