--- a/app/.jshintrc
+++ b/app/.jshintrc
@@ -119,6 +119,7 @@
       "process": false,
       "WebApp": false,
       "WebAppInternals": false,
+      "ServiceConfiguration": false,
 
       // globals useful when creating Meteor packages
       "Npm": false,
@@ -136,6 +137,7 @@
       "FlowLayout": false,
       "s": false,
       "AntiModals": false,
+      "moment": false,
 
       // Collections
       "Apps": true,
