--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .meteor/meteorite
 app/settings.json
 app/npm-debug.log
-app/private/Sandstorm App Store-0bc94ef92f40.json
+app/private/SandstormAppStore.json
+app/private/SandstormAppStore.pem
