removed settings files from mup directories

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ app/settings.json
 app/npm-debug.log
 app/private/SandstormAppStore.json
 app/private/SandstormAppStore.pem
+mup/settings.json
+mupx/settings.json
